src/Components/MainLayoutComponents/Renderer.css
.outerDiv {
    width: 100%;
    display: flex;
    flex-direction: column;
    padding: 1em;
}

.outerDiv > * {
    padding-bottom: 1em;
}

.playerName {
    padding-top: 0.5em;
    font-weight: bold;
}

.healthBarAndDefense {
    display: flex;
    flex-direction: row;
    gap: 1em;
}

.healthBarAndDefense > *:first-child {
    flex-grow: 1;
}

.prof {
    font-weight: bold
}

.baseStats {
    width: 100%;
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: center;
    row-gap: 1em;
    column-gap: 1em;
    max-height: 65em;
}

.textEntry {
    width: 0;
    min-width: 100%;
}

@media only screen and (max-width: 600px) {
    .baseStats > * {
        width: calc(50vw - 2em);
    }
}

